--- a/dawnTheme/sections/results.liquid
+++ b/dawnTheme/sections/results.liquid
@@ -13,21 +13,21 @@
             <videosection class= 'flex '>
             </videosection>
 
-            <celebSecret class='flex flex-col sm:flex-row items-center justify-center w-full md:mx-0 mx-10 md:relative h-[150vw] md:h-[75vw] border-2 border-black'>
-                <img class="rounded-[50px] mt-[-50vw] md:mt-0
+            <celebSecret class='flex flex-col sm:flex-row items-center justify-center w-full md:mx-0 mx-10 md:relative h-[150vw] md:h-[75vw]'>
+                <img class="rounded-[50px] mt-[-40vw] md:mt-0
                  absolute md:right-[50px] max-h-[1000px]  xl:right-[5vw] z-0 md:w-[60vw] w-[90vw]" src="https://in.swati.com/cdn/shop/files/Celebs_1000x855E.jpg?v=1728035472&width=750">
-                <div class="flex flex-col flex-wrap absolute  md:left-[40px] w-[70vw] md:w-[36vw]
-                 bg-oceanbg text-start z-10 rounded-[6vw] md:rounded-[40px] px-[6vw] md:px-[4vw] py-[6vw] md:py-[4vw]
-                  gap-10 h-auto mb-[-50vw] md:mb-0">
+                <div class="flex flex-col flex-wrap absolute  md:left-[40px] w-[80vw] md:w-[36vw]
+                 bg-oceanbg text-start z-10 rounded-[6vw] md:rounded-[40px] px-[6vw] md:px-[4vw] py-[6vw] md:py-[4vw] gap-6
+                  md:gap-10 h-auto mb-[-60vw] md:mb-0">
                     <p class="font-fraunces leading-tight text-darkPurple text-[4vw] md:text-[45px] font-extrabold">
                         Celebrity secret revealed!
                     </p>
-                    <p class="text-[2vw] md:text-[1.6rem] font-semibold">
+                    <p class="text-[1rem] md:text-[1.6rem] font-semibold">
                         Discover how celebrities are transforming their look with colored contact lenses!
                     </p>
-                    <ul class="flex flex-col gap-10 h-auto">
+                    <ul class="flex flex-col gap-10 h-auto md:text-md text-[1rem]">
                         <li class="flex text-start">
-                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] text-md">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
                                 1
                             </div>
                             <div class="flex">
@@ -35,7 +35,7 @@
                             </div>
                         </li>
                         <li class="flex text-start">
-                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] text-md">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
                                 2
                             </div>
                             <div class="flex">
