--- a/dawnTheme/sections/results.liquid
+++ b/dawnTheme/sections/results.liquid
@@ -22,10 +22,10 @@
                     <p class="font-fraunces leading-tight text-darkPurple text-[4vw] md:text-[45px] font-extrabold">
                         Celebrity secret revealed!
                     </p>
-                    <p class="text-[1rem] md:text-[1.6rem] font-semibold">
+                    <p class="text-[1.6rem] md:text-[1.8rem] font-semibold">
                         Discover how celebrities are transforming their look with colored contact lenses!
                     </p>
-                    <ul class="flex flex-col gap-10 h-auto md:text-md text-[1rem]">
+                    <ul class="flex flex-col gap-10 h-auto md:text-2xl text-[1.6rem]">
                         <li class="flex text-start">
                             <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
                                 1
@@ -45,6 +45,48 @@
                     </ul>
                 </div>
             </celebSecret>
+
+            <steps class='flex flex-col sm:flex-row items-center justify-center w-full md:mx-0 mx-10 md:relative h-[150vw] md:h-[80vw]'>
+                <img class="rounded-[50px] mt-[-40vw] md:mt-0
+                 absolute md:left-[50px] max-h-[1000px]  xl:left-[5vw] z-0 md:w-[60vw] w-[90vw]" src="https://in.swati.com/cdn/shop/files/Swati_applying.jpg?v=1725548326&width=750">
+                <div class="flex flex-col flex-wrap absolute  md:right-[40px] w-[80vw] md:w-[36vw]
+                 bg-oceanbg text-start z-10 rounded-[6vw] md:rounded-[40px] px-[6vw] md:px-[4vw] py-[6vw] md:py-[4vw] h-auto mb-[-60vw] md:mb-0">
+                    <div class="font-fraunces leading-tight text-darkPurple text-[4vw] md:text-[45px] font-extrabold md:mb-10 mb-6">
+                        How to Use In 
+                        <div class = 'font-handlee leading-tight text-[4vw] md:text-[45px] mt-2 text-textPurple'> 3 Simple Steps</div>
+                    </div>
+                
+                    <p class="text-[1.6rem] md:text-[1.8rem] font-semibold  md:mb-10 mb-6">
+                        SWATI coloured lenses are easy, safe, and extremely natural!
+                    </p>
+                    <ul class="flex flex-col gap-10 h-auto md:text-2xl text-[1.6rem]">
+                        <li class="flex text-start">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
+                                1
+                            </div>
+                            <div class="flex">
+                                 Place the lens on your fingertip, ensuring the edge is perfectly upright. 
+                            </div>
+                        </li>
+                        <li class="flex text-start">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
+                                2
+                            </div>
+                            <div class="flex">
+                                Hold your eye open with your free hand and gently place the lens on your cornea. 
+                            </div>
+                        </li>
+                        <li class="flex text-start">
+                            <div class="bg-darkPurple mr-5 flex text-white text-center font-bold  items-center px-4 py-2 rounded-full w-[28px] h-[28px] ">
+                                3
+                            </div>
+                            <div class="flex">
+                                Blink slowly and look around to settle the lens.  
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </steps>
             
 
 
