--- a/dawnTheme/assets/style.css
+++ b/dawnTheme/assets/style.css
@@ -676,6 +676,14 @@ video {
   margin-top: -40vw;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .block{
   display: block;
 }
@@ -1066,6 +1074,10 @@ video {
     left: 40px;
   }
 
+  .md\:right-\[40px\]{
+    right: 40px;
+  }
+
   .md\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
@@ -1077,6 +1089,10 @@ video {
 
   .md\:mt-0{
     margin-top: 0px;
+  }
+
+  .md\:mb-10{
+    margin-bottom: 2.5rem;
   }
 
   .md\:flex{
@@ -1183,6 +1199,24 @@ video {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-\[2rem\]{
+    font-size: 2rem;
+  }
+
+  .md\:text-\[1\.8rem\]{
+    font-size: 1.8rem;
+  }
+
+  .md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -1198,6 +1232,10 @@ video {
 @media (min-width: 1280px){
   .xl\:right-\[5vw\]{
     right: 5vw;
+  }
+
+  .xl\:left-\[5vw\]{
+    left: 5vw;
   }
 }
 
