--- a/dawnTheme/sections/results.liquid
+++ b/dawnTheme/sections/results.liquid
@@ -87,9 +87,6 @@
                     </ul>
                 </div>
             </steps>
-            
-
-
              {% comment %} <picture class="w-full">
                     <source
                         srcset = 'https://in.swati.com/cdn/shop/files/Celebs_1000x855E.jpg?v=1728035472&width=750 750w'
@@ -97,9 +94,26 @@
                     >
                 </picture> {% endcomment %}
         
-        
     </div>
+</div>
 
+<div class="flex w-full justify-center items-center mb-10 h-[100px]">
+    <button class="bg-textPurple text-white rounded-lg px-10 py-5 font-semibold text-3xl hover:px-[2.6rem] hover:py-[1.3rem]"> SHOP ALL LENSES </button>
+</div>
+
+<div class=" my-10">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 79">
+    <defs>
+      <clipPath id="line_separator_template--17864184758503__line_separator_NtEdxt">
+        <rect width="1440" height="79" fill="none"></rect>
+      </clipPath>
+    </defs>
+    <g clip-path="url(#line_separator_template--17864184758503__line_separator_NtEdxt)">
+      
+        <path d="M1458.5,73H415c-26.5-.67-84.5-4.5-104.5-14.5-25-12.5-13-71.5,24.5-48s-56,62.5-84.5,62.5H-43" fill="none" stroke="#7dc8c2" stroke-dasharray="9 9" stroke-linecap="round" stroke-width="5"></path>
+      
+    </g>
+  </svg>
 </div>
 
 
