--- a/dawnTheme/sections/announcement-bar.liquid
+++ b/dawnTheme/sections/announcement-bar.liquid
@@ -157,7 +157,7 @@
       "type": "color_scheme",
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
-      "default": "scheme-4"
+      "default": "Scheme-4"
     },
     {
       "type": "checkbox",
